[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Meshes/game-result-board-mesh.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/Calistoga/Calistoga-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/TimeAttack/GameResultsBoard.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/Fonts/Calistoga/Calistoga-Regular.ttf"

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = SubResource( 7 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("ScoreSection/Viewport")

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("ScoreSection/Viewport2")

[sub_resource type="SpatialMaterial" id=16]
albedo_color = Color( 0.917647, 0.858824, 0, 1 )

[sub_resource type="CubeMesh" id=17]
material = SubResource( 16 )
size = Vector3( 0.005, 0.15, 0.4 )

[sub_resource type="DynamicFont" id=18]
size = 38
font_data = ExtResource( 2 )

[sub_resource type="ViewportTexture" id=19]
viewport_path = NodePath("ScoreSection/HighScoreLabel/Viewport")

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = SubResource( 7 )

[sub_resource type="ViewportTexture" id=5]
viewport_path = NodePath("PickedNumberSection/Viewport")

[sub_resource type="ViewportTexture" id=15]
viewport_path = NodePath("PickedNumberSection/Viewport2")

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = SubResource( 7 )

[sub_resource type="ViewportTexture" id=10]
viewport_path = NodePath("MaxComboSection/Viewport")

[sub_resource type="DynamicFont" id=11]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="ViewportTexture" id=12]
viewport_path = NodePath("MaxComboSection/Viewport2")

[sub_resource type="ViewportTexture" id=20]
viewport_path = NodePath("MaxComboSection/FullComboLabel/Viewport")

[sub_resource type="DynamicFont" id=13]
size = 150
font_data = ExtResource( 2 )

[sub_resource type="ViewportTexture" id=14]
viewport_path = NodePath("GradeSection/Viewport")

[node name="GameResultsBoard" type="Spatial"]
script = ExtResource( 3 )

[node name="ScoreSection" type="Spatial" parent="."]
transform = Transform( 0.985736, 0, 0.1683, 0, 1, 0, -0.1683, 0, 0.985736, -0.0736534, -0.0715924, 0.156791 )

[node name="Viewport" type="Viewport" parent="ScoreSection"]
size = Vector2( 300, 300 )
transparent_bg = true
render_target_v_flip = true

[node name="ScoreLabel" type="Label" parent="ScoreSection/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "Score"

[node name="Sprite3D" type="Sprite3D" parent="ScoreSection"]
transform = Transform( -0.0948563, 0, 0.49092, 0, 0.5, 0, -0.49092, 0, -0.0948563, 0.115219, -0.0973555, 0.43901 )
texture = SubResource( 2 )

[node name="Viewport2" type="Viewport" parent="ScoreSection"]
size = Vector2( 300, 300 )
transparent_bg = true
render_target_v_flip = true

[node name="ScoreValue" type="Label" parent="ScoreSection/Viewport2"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "--"

[node name="Sprite3D2" type="Sprite3D" parent="ScoreSection"]
transform = Transform( 0.0225332, 0, 0.499491, 0, 0.5, 0, -0.499491, 0, 0.0225332, 0.177275, -0.110105, -0.209958 )
texture = SubResource( 4 )

[node name="HighScoreLabel" type="MeshInstance" parent="ScoreSection"]
transform = Transform( 0.794441, 0.00824231, 0.0937852, -0.0324534, 0.772059, 0.207055, -0.0883764, -0.209421, 0.767029, 0.20252, 0.611067, 0.724598 )
visible = false
mesh = SubResource( 17 )
material/0 = null

[node name="Viewport" type="Viewport" parent="ScoreSection/HighScoreLabel"]
size = Vector2( 300, 300 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="ScoreSection/HighScoreLabel/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 18 )
text = "High Score"

[node name="Sprite3D" type="Sprite3D" parent="ScoreSection/HighScoreLabel"]
transform = Transform( -9.31323e-09, 0, 0.2, 0, 0.2, 0, -0.2, 0, -9.31323e-09, 0.00562683, -0.248284, -0.114605 )
modulate = Color( 0.117647, 0.564706, 0.937255, 1 )
texture = SubResource( 19 )

[node name="PickedNumberSection" type="Spatial" parent="."]
transform = Transform( 0.985736, 0, 0.1683, 0, 1, 0, -0.1683, 0, 0.985736, -0.0736534, -0.408591, 0.156791 )

[node name="Viewport" type="Viewport" parent="PickedNumberSection"]
size = Vector2( 300, 300 )
transparent_bg = true
render_target_v_flip = true

[node name="PickedNumberLabel" type="Label" parent="PickedNumberSection/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_constants/line_spacing = -5
custom_fonts/font = SubResource( 8 )
text = "Apples Picked"

[node name="Sprite3D" type="Sprite3D" parent="PickedNumberSection"]
transform = Transform( -0.0768294, 0, 0.494061, 0, 0.5, 0, -0.494061, 0, -0.0768294, 0.148635, -0.155309, 0.431831 )
texture = SubResource( 5 )

[node name="Viewport2" type="Viewport" parent="PickedNumberSection"]
size = Vector2( 300, 300 )
transparent_bg = true
render_target_v_flip = true

[node name="PickedNumberValue" type="Label" parent="PickedNumberSection/Viewport2"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "--"

[node name="Sprite3D2" type="Sprite3D" parent="PickedNumberSection"]
transform = Transform( 0.0940418, 0, 0.491075, 0, 0.5, 0, -0.491075, 0, 0.0940418, 0.276196, -0.0900153, -0.686978 )
texture = SubResource( 15 )

[node name="MaxComboSection" type="Spatial" parent="."]
transform = Transform( 0.985736, 0, 0.1683, 0, 1, 0, -0.1683, 0, 0.985736, -0.0736534, -1.87274, 0.156791 )

[node name="Viewport" type="Viewport" parent="MaxComboSection"]
size = Vector2( 300, 300 )
transparent_bg = true
render_target_v_flip = true

[node name="MaxComboLabel" type="Label" parent="MaxComboSection/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_constants/line_spacing = -5
custom_fonts/font = SubResource( 9 )
text = "Max Combo"

[node name="Sprite3D" type="Sprite3D" parent="MaxComboSection"]
transform = Transform( -0.0690681, 0, 0.495206, 0, 0.5, 0, -0.495206, 0, -0.0690681, 0.155484, 0.938119, 0.431225 )
texture = SubResource( 10 )

[node name="Viewport2" type="Viewport" parent="MaxComboSection"]
size = Vector2( 300, 300 )
transparent_bg = true
render_target_v_flip = true

[node name="MaxComboValue" type="Label" parent="MaxComboSection/Viewport2"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 11 )
text = "--"

[node name="Sprite3D2" type="Sprite3D" parent="MaxComboSection"]
transform = Transform( 0.0642072, 0, 0.495859, 0, 0.5, 0, -0.495859, 0, 0.0642072, 0.228637, 0.954038, -0.558938 )
texture = SubResource( 12 )

[node name="FullComboLabel" type="MeshInstance" parent="MaxComboSection"]
transform = Transform( 0.797611, 2.23517e-08, 0.0617789, -0.0159896, 0.772741, 0.206437, -0.059674, -0.207055, 0.770434, 0.128608, 1.69759, 0.438776 )
visible = false
mesh = SubResource( 17 )
skeleton = NodePath("../../ScoreSection")
material/0 = null

[node name="Viewport" type="Viewport" parent="MaxComboSection/FullComboLabel"]
size = Vector2( 300, 300 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="MaxComboSection/FullComboLabel/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 18 )
text = "Full Combo"

[node name="Sprite3D" type="Sprite3D" parent="MaxComboSection/FullComboLabel"]
transform = Transform( -3.72529e-09, -9.31323e-10, 0.2, 0, 0.2, 0, -0.2, 3.72529e-09, -1.11759e-08, 0.00562686, -0.248284, -0.114605 )
modulate = Color( 0.117647, 0.564706, 0.937255, 1 )
texture = SubResource( 20 )

[node name="GradeSection" type="Spatial" parent="."]

[node name="Viewport" type="Viewport" parent="GradeSection"]
size = Vector2( 300, 300 )
transparent_bg = true
render_target_v_flip = true

[node name="GradeValue" type="Label" parent="GradeSection/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 13 )
text = "-"

[node name="Sprite3D" type="Sprite3D" parent="GradeSection"]
transform = Transform( 0.222053, 0, 0.768566, 0, 0.8, 0, -0.768566, 0, 0.222053, 0.458041, -0.42079, -1.5021 )
modulate = Color( 0.917647, 0.858824, 0, 1 )
texture = SubResource( 14 )

[node name="game-result-board-mesh" parent="." instance=ExtResource( 1 )]
